--- a/심규보/3주차.md
+++ b/심규보/3주차.md
@@ -1,6 +1,7 @@
 # 4장 가변 vs 불변
 ## 재할당
-- 변수에 값을 다시 할당하는 것을 재할당 파괴적 할당이라 한다.
+-  **재할당**은 기존 변수에 새로운 값을 할당하는 것을 말하며, **파괴적 할당**으로도 불린다. 
+- 기존에 할당된 메모리가 해제되고 새로운 값으로 대체될수 있음
 - 중간의 의미가 바뀌면 읽는 사람은 헷갈리고 잠재적 버그 유발
 
 ## 불변으로 만들어 재할당 막기
@@ -35,6 +36,7 @@ func updateScore(player: Player, additionalScore: Int) {
     player.score += additionalScore 
 }
 
+// sideEffects를 일으킬수 있음
 updateScore(player: playerOne, additionalScore: 30)
 
 print("Player \(playerOne.name) score \(playerOne.score)")
@@ -115,5 +117,6 @@ print("Player \(updatedPlayer.name) new score \(updatedPlayer.score)")
 ### 그럼에도 가변을 써야한다면?
 - 예를 들어 이미지처럼 큰 데이터를 처리하거나 리소스의 제약이 큰 겅우 가변을 쓰는게 유리할수 있다.
 - 스코프를 제한해서 가변으로 해보자.
-  
-++ 불변을 써서 신중히 설계하더라도, 코드외부와의 데이터 교환에 주의
+
+## 결론
+불변을 기본으로 하여 신중하게 설계하되, 리소스와 외부와의 데이터 교환 시 상황을 고려해 가변을 필요에 따라 적절히 알잘딱 사용
