--- a/심규보/4주차.md
+++ b/심규보/4주차.md
@@ -128,12 +128,9 @@ func createProfile(firstName: String, lastName: String, email: String, age: Int,
 
 // 개선된 코드
 struct UserProfile {
-    let firstName: String
-    let lastName: String
+    let name: String
     let email: String
     let age: Int
-    let username: String
-    let password: String
 }
 
 func createProfile(with profile: UserProfile) {
