--- a/심규보/4주차.md
+++ b/심규보/4주차.md
@@ -30,7 +30,23 @@ moneyData1.amount = OrderManager.add(moneyData1.amount, moneyData2.amount);
 
 ### private 생성자 + 팩토리 메소드를 통해 목적에 따라 초기화하기
 ```swift
+class Product {
+    private var id: UUID
+    private var name: String
 
+    private init(id: UUID, name: String) {
+        self.id = id
+        self.name = name
+    }
+
+    static func createProduct(name: String) -> Product {
+        return Product(id: UUID(), name: name)
+    }
+}
+
+let product = Product.createProduct(name: "iPhone 15 Pro")
+print("ID: \(product.id), Name: \(product.name)")
+// 출력결과: ID: UUID 그 긴거, Name: iPhone 15 Pro
 ```
 
 ### 생설 로직이 많아지면 팩토리 클라스를 고려해보자
@@ -42,7 +58,7 @@ moneyData1.amount = OrderManager.add(moneyData1.amount, moneyData2.amount);
 
 ``` swift
 // 문제가 되는 코드
-class Utility {
+class VeryCommonSuperWidelyUsedUtility {
     static func formatDate(_ date: Date) -> String {
         let formatter = DateFormatter()
         formatter.dateFormat = "yyyy-MM-dd"
