--- a/심규보/4주차.md
+++ b/심규보/4주차.md
@@ -97,7 +97,43 @@ extension Date {
 - 횡단 관심사를 처리하는 클라스를 따로 만들어서 응집도를 높이는 방법도 있음
   
   ```swift
-  // 횡단 관심사 코드
+    // 응집도가 낮은 코드
+    struct SettingsView: View {
+        @State private var isDarkMode: Bool = UserDefaults.standard.bool(forKey: "isDarkMode")
+
+        var body: some View {
+            Toggle(isOn: $isDarkMode) {
+                Text("Dark Mode")
+            }
+            .onChange(of: isDarkMode) { newValue in
+                UserDefaults.standard.set(newValue, forKey: "isDarkMode")
+            }
+        }
+    }
+
+    // 개선된 코드
+    class SettingsViewModel: ObservableObject {
+        @Published var isDarkMode: Bool {
+            didSet {
+                UserDefaults.standard.set(isDarkMode, forKey: "isDarkMode")
+            }
+        }
+        
+        init() {
+            isDarkMode = UserDefaults.standard.bool(forKey: "isDarkMode")
+            }
+        }
+    }
+
+    struct SettingsView: View {
+        @ObservedObject var viewModel = SettingsViewModel()
+
+        var body: some View {
+            Toggle(isOn: $viewModel.isDarkMode) {
+                Text("Dark Mode")
+            }
+        }
+    }
   ```
 
 ## 결과를 리턴하는데 매개변수 사용하지 않기
