--- a/심규보/4주차.md
+++ b/심규보/4주차.md
@@ -73,7 +73,7 @@ class VeryCommonSuperWidelyUsedUtility {
 }
 
 // 개선된 코드
-// 실제로 이렇게 해서 퍼
+// 실제로 이렇게 해서 퍼포먼스를 끌어올림
 extension Date {
   // DateFomatter는 생성하는데 비용이 굉장히 많이 들어서 static으로 만들어놓고 사용하는게 좋다.
     static let dateFormatter: DateFormatter = {
